# firmware-main

./: .clang-tidy  .clangd  .gitignore  .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  README.md  STM32F746VETx_FLASH.ld  STM32F746VETx_FLASH_fixed.ld  main_unit.ioc  stm32f7-arm-toolchain.cmake
Core/Inc/: main.h  stm32f7xx_hal_conf.h  stm32f7xx_it.h  tim.h
Core/Src/: crc.c  dma.c  gpio.c  i2c.c  main.c  quadspi.c  rtc.c  spi.c  stm32f7xx_hal_msp.c  stm32f7xx_hal_timebase_tim.c  stm32f7xx_it.c  tim.c  usart.c
Firmware/Inc/: buzzer.hpp  config.hpp  cron.hpp  device.hpp  flow-meter.hpp  history.hpp  leak-logic-mgr.hpp  lora.hpp  network-mgr.hpp  probe.hpp  scoped-res.hpp  server.hpp  socket.hpp  sx1278.hpp  ui.hpp  utc.hpp  valve.hpp
Firmware/Inc/bitmaps/: error.xbm  hotspot.xbm  ip_address.xbm  l_per_min.xbm  splashscreen.xbm  total_flow.xbm  water_alarm.xbm  water_blocked.xbm  wateranim_0.xbm  wateranim_1.xbm  wateranim_2.xbm  wateranim_3.xbm  wateranim_no.xbm  wifi_conn.xbm  wifi_pass.xbm  wifi_sig0.xbm  wifi_sig1.xbm  wifi_sig2.xbm  wifi_sig3.xbm  wifi_sig4.xbm  wifi_user.xbm
Firmware/Inc/drivers/: buzzer.hpp  eeprom.hpp  esp-at.hpp  flash.hpp  lora.hpp  oled.hpp  sx1278.hpp
Firmware/Src/: buzzer.cpp  config.cpp  cron.cpp  device.cpp  flow-meter.cpp  history.cpp  leak-logic-mgr.cpp  lora.cpp  network-mgr.cpp  probe.cpp  rtos.cpp  server.cpp  socket.cpp  sx1278.cpp  ui.cpp  utc-data.cpp  utc.cpp  valve.cpp
Firmware/Src/drivers/: buzzer.cpp  eeprom.cpp  esp-at.cpp  flash.cpp  lora.cpp  oled.cpp  sx1278.cpp
FreeRTOS/: FreeRTOSConfig.h
Scripts/: generate-month-utc-lut.js  month-lut.txt  run-clang-format.sh
